# proj-rs-lite

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
docs/: web-build.md
npm/: package.json
proj-lite-sys/: Cargo.toml  build.rs
proj-lite-sys/shim/: wasm-shim.h
proj-lite-sys/shim/musl/: README.md
proj-lite-sys/shim/musl/errno/: __errno_location.c
proj-lite-sys/shim/musl/include/: features.h  inttypes.h  stdio.h  stdlib.h  string.h  time.h
proj-lite-sys/shim/musl/internal/: floatscan.c  floatscan.h  libm.h  shgetc.h  stdio_impl.h  stdlib.h  string.h
proj-lite-sys/shim/musl/math/: __fpclassifyl.c  acosh.c  asinh.c  atanh.c  fmodl.c  scalbnl.c  sqrt.c  trunc.c
proj-lite-sys/shim/musl/stdio/: __toread.c  __uflow.c
proj-lite-sys/shim/musl/stdlib/: qsort.c  qsort_nr.c  strtod.c  strtol.c
proj-lite-sys/shim/musl/string/: memchr.c  memrchr.c  stpcpy.c  stpncpy.c  strchr.c  strchrnul.c  strcpy.c  strcspn.c  strlen.c  strncpy.c  strrchr.c
proj-lite-sys/shim/printf/: README.md
proj-lite-sys/src/: lib.rs
proj-lite-web/: Cargo.toml
proj-lite-web/src/: lib.rs
site/: index.html  main.js
src/: lib.rs
web/: env.js  index.html  main.js  wasi_snapshot_preview1.js
