[package]
name = "proj-lite-sys"
version = "0.1.0"
edition = "2024"
links = "proj"
exclude = [
  "vendor/proj/**",
]

[dependencies]
link-cplusplus = { version = "1.0", features = ["nothing"] }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
libsqlite3-sys = { version = "0.35", features = ["bundled"] }

[build-dependencies]
cc = "1.2"
cmake = "0.1"
flate2 = "1"
tar = "0.4"
